fix styles and screencast

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
 .before-after-slider__delimer {
   position: absolute;
   height: 100%;
-  background: gray;
+  background: #fff;
   width: 5px;
   top: 0;
   display: flex;
