--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@
 .before-after-slider__delimiter {
   position: absolute;
   height: 100%;
-  background: #fff;
+  background-color: #fff;
   width: 5px;
   top: 0;
   display: flex;
@@ -32,8 +32,12 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  background: #fff;
+  background-color: #fff;
   cursor: pointer;
+}
+.before-after-slider__delimiter-img {
+  cursor: pointer;
+  user-select: none;
 }
 
 .before-after-slider__size-fix-img {
